--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>ComicCon_Webb</title>
+  <title>Portfolio CharJav</title>
   <meta name="description" content="Web con Skeleton">
   <meta name="author" content="Chary J.">
 
@@ -37,7 +37,7 @@
 <div class="cabecera">
 	
 	<div class="logo">
-		<h2>Comic-Con</h2>
+		<h2>Portfolio-CharJav</h2>
   	</div>
 	
 	<div class="menu">
@@ -59,7 +59,7 @@
    	
 			<div class="principal">
 
-				<h1> Welcome to Convention International of Comic</h1>
+				<h1> Portfolio Char&Jav</h1>
 				
 			</div>
 
